--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "JavaScript Pro Platzi",
     "main": "index.js",
     "scripts": {
-        "start": "live-server"
+        "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
     },
     "repository": {
         "type": "git",
@@ -17,6 +17,9 @@
     },
     "homepage": "https://github.com/primo9293/JavaScript-Pro#readme",
     "devDependencies": {
-        "live-server": "^1.2.1"
-    }
+        "parcel-bundler": "1.12.4"
+    },
+    "browserslist": [
+        "last 1 Chrome version"
+    ]
 }
